--- a/Lab4Struts2/WebContent/css/style.css
+++ b/Lab4Struts2/WebContent/css/style.css
@@ -16,8 +16,10 @@ table {
 	border-left-style: solid;
 	margin-right: auto;
 	margin-left: auto;
+
 }
-th{
+
+th {
 	border-style: solid;
 	border-right-width: 1px;
 }
@@ -29,19 +31,20 @@ h1 {
 	text-align: center
 }
 
-a {
-	font-size: large;
-	text-decoration: none;
+a,a:VISITED {
+	color: black;
+	padding: 5px 10px;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+	padding: 5px 10px;
 }
 
-a:HOVER {
-	color: lime;
-	font-weight: normal;
-	font-style: normal;
-}
-
-a:ACTIVE {
-	color: navy;
+a:hover,a:focus {
+	color: #fff;
+	background: #fa0;
+	-webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0.5, 0.5);
 }
 
 caption {
@@ -61,7 +64,7 @@ body {
 }
 
 #content {
-	padding-bottom:100px; /* Height of the footer element */
+	padding-bottom: 100px; /* Height of the footer element */
 }
 
 #header {
@@ -86,10 +89,12 @@ body {
 	display: inline-block;
 	padding: 10px;
 	color: white;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+	text-decoration: none;
 }
 
 #nav a:HOVER {
-	color: lime;
+	
 }
 
 #footer {
@@ -105,7 +110,6 @@ body {
 	height: 60px;
 	background: gray;
 }
-
 
 #pageCss {
 	font-style: normal;
@@ -134,3 +138,11 @@ body {
 .errorMessage {
 	color: lime;
 }
+/* Applied for odd rows for display tag */
+
+.odd{
+	background-color: ffffcc;
+}
+
+
+
