--- a/Lab4Struts2/WebContent/css/style.css
+++ b/Lab4Struts2/WebContent/css/style.css
@@ -1,26 +1,25 @@
 @CHARSET "ISO-8859-1";
 
+html,body,p {
+	padding: 0;
+	margin: 0;
+}
+
 table {
-	background-color: grey;
-	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-	font-size: 14px;
-	font-style: normal;
-	float: none;
-	border-top-width: thin;
-	border-right-width: thin;
-	border-bottom-width: thin;
-	border-left-width: thin;
-	border-top-style: solid;
-	border-right-style: solid;
-	border-bottom-style: solid;
-	border-left-style: solid;
 	margin-right: auto;
 	margin-left: auto;
 }
 
 th {
-	border-style: solid;
 	border-right-width: 1px;
+}
+
+#footer {
+	position: relative;
+	bottom: 0;
+	width: 100%;
+	height: 60px; /* Height of the footer */
+	background: #6cf;
 }
 
 h1 {
@@ -46,8 +45,7 @@ a:hover,a:focus {
 }
 
 caption {
-	background-color: gray;
-	font-size: large;
+	background-color: rgb(224, 224, 224);
 }
 
 body {
@@ -57,17 +55,12 @@ body {
 }
 
 #container {
-	min-height: 100%;
+	min-height: 745px;
 	position: relative;
-}
-
-#content {
-	padding-bottom: 100px; /* Height of the footer element */
 }
 
 #header {
 	background: gray;
-	padding: 9px;
 }
 
 #nav {
@@ -91,52 +84,17 @@ body {
 	text-decoration: none;
 }
 
-#nav a:HOVER {
+.errorMessage {
+	color: rgb(255, 61, 61);
+}
+/* Applied for odd rows for display tag */
+#pager {
+	width: 500px;
+	height: 70px;
+	margin: 8px auto 0px auto;
+	overflow: auto;
+}
+.data{
 	
 }
 
-#footer {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 60px; /* Height of the footer */
-	background: #6cf;
-}
-
-#tableFooter {
-	width: 100%;
-	height: 60px;
-	background: gray;
-}
-
-#pageCss {
-	font-style: normal;
-	text-decoration: none;
-}
-
-#pageCss a:VISITED {
-	background-color: orange;
-}
-
-#data {
-	background-color: white;
-}
-
-#centerBody {
-	margin-left: auto;
-	margin-right: auto;
-	width: 70%;
-	max-width: 700px;
-	background-color: #eff0e2;
-	padding: 80px;
-	border: 1px solid #ccc;
-	background-color: #eff0e2;
-}
-
-.errorMessage {
-	color: lime;
-}
-/* Applied for odd rows for display tag */
-.odd {
-	background-color: ffffcc;
-}
