Full Ajax Paginator
Working ajax paginator on all pages + error checking on paramets of
pagination. If pg number typed by user in browser link is larger than
total pages available then last page is display, if is provided a String
or negative number then first page is displayed.

--- a/Lab4Struts2/WebContent/css/style.css
+++ b/Lab4Struts2/WebContent/css/style.css
@@ -55,7 +55,7 @@ body {
 }
 
 #container {
-	min-height: 745px;
+	min-height: 145px;
 	position: relative;
 }
 
@@ -94,7 +94,14 @@ body {
 	margin: 8px auto 0px auto;
 	overflow: auto;
 }
-.data{
+
+.data {
 	
 }
 
+#loading {
+	display:block;
+	margin-left: 47%;
+	margin-right: 53%;
+	width:150px;
+}
